code changes for tracker number 23646
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@7092 553898ca-32d5-487a-af8b-6cf4ca579ab4